# jansou

./: .gitignore  CLAUDE.md  LICENSE  README.md  data.json  mise.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
dataset/tenhou_json/: list.txt
docs/paifu/: MJAI_JSOL.md  MJAI_JSONL.md  MJLOG_XML.md  TENHOU_JSON.md
examples/net/: README.md  client.py  play.py  protocol.py  server.py  table.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2b413757f48ad007_actions_py.html  z_2b413757f48ad007_agents_py.html  z_2b413757f48ad007_environment_py.html  z_2b413757f48ad007_events_py.html  z_2b413757f48ad007_flow_py.html  z_2b413757f48ad007_progression_py.html  z_2b413757f48ad007_state_py.html  z_2b413757f48ad007_wall_py.html  z_2f2fbf0365650748_from_game_py.html  z_2f2fbf0365650748_mjai_py.html  z_2f2fbf0365650748_mjlog_py.html  z_2f2fbf0365650748_paifu_py.html  z_2f2fbf0365650748_replay_py.html  z_2f2fbf0365650748_tenhou_json_py.html  z_2f2fbf0365650748_tiles_py.html  z_3e09e3991c429561_hand_py.html  z_3e09e3991c429561_notation_py.html  z_3e09e3991c429561_rules_py.html  z_3e09e3991c429561_tiles_py.html  z_497577d952ab9445___init___py.html  z_7c54e583aa4e862f_check_py.html  z_7c54e583aa4e862f_cli_py.html  z_cb72606abdee5453_decompose_py.html  z_cb72606abdee5453_efficiency_py.html  z_cb72606abdee5453_shanten_py.html  z_cb72606abdee5453_waits_py.html  z_df99dd864c29877f_context_py.html  z_df99dd864c29877f_fu_py.html  z_df99dd864c29877f_score_py.html  z_df99dd864c29877f_yaku_py.html
src/jansou/: __init__.py
src/jansou/analysis/: __init__.py  decompose.py  efficiency.py  shanten.py  waits.py
src/jansou/core/: __init__.py  hand.py  notation.py  rules.py  tiles.py
src/jansou/game/: __init__.py  actions.py  agents.py  environment.py  events.py  flow.py  progression.py  state.py  wall.py
src/jansou/io/: __init__.py  from_game.py  mjai.py  mjlog.py  paifu.py  replay.py  tenhou_json.py  tiles.py
src/jansou/scoring/: __init__.py  context.py  fu.py  score.py  yaku.py
src/jansou/validation/: __init__.py  check.py  cli.py
tests/: conftest.py  test_actions.py  test_agents.py  test_decompose.py  test_efficiency.py  test_environment.py  test_events.py  test_flow.py  test_fu.py  test_hand.py  test_io_edges.py  test_io_from_game.py  test_io_mjai.py  test_io_mjlog.py  test_io_paifu.py  test_io_replay.py  test_io_tenhou_json.py  test_io_tiles.py  test_io_writers.py  test_notation.py  test_package.py  test_progression.py  test_rules.py  test_scoring.py  test_shanten.py  test_state.py  test_tiles.py  test_validation_check.py  test_validation_cli.py  test_waits.py  test_wall.py  test_yaku.py
