[project]
name = "jansou"
version = "0.1.0"
description = "Riichi Mahjong Environments and Utilities"
authors = [
    { name = "Jaemin Noh", email = "korsnack@korsnack.kr" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["mahjong", "riichi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Snack-X/jansou"
Documentation = "https://snack-x.github.io/jansou/"
Repository = "https://github.com/Snack-X/jansou"
Issues = "https://github.com/Snack-X/jansou/issues"

[project.scripts]
jansou-validate = "jansou.validation.cli:main"

[dependency-groups]
dev = [
    "pdoc>=15.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jansou"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.claude",
    "/.github",
    "/dataset",
    "/docs",
    "CLAUDE.md",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",   # tab-indentation
    "E111",   # indentation-with-invalid-multiple
    "E114",   # indentation-with-invalid-multiple-comment
    "E117",   # over-indented
    "D203",   # incorrect-blank-line-before-class
    "D206",   # docstring-tab-indentation
    "D300",   # triple-single-quotes
    "Q000",   # bad-quotes-inline-string
    "Q001",   # bad-quotes-multiline-string
    "Q002",   # bad-quotes-docstring
    "Q003",   # avoidable-escaped-quote
    "Q004",   # unnecessary-escaped-quote
    "COM812", # missing-trailing-comma
    "COM819", # prohibited-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation

    "EM", # flake8-errmsg

    "PLR2004", # magic-value-comparison
    "S311",    # suspicious-non-cryptographic-random-usage
    "TRY003",  # raise-vanilla-args
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D1",      # undocumented-*

    "ANN001",  # missing-type-function-argument
    "INP001",  # implicit-namespace-package
    "PLR2004", # magic-value-comparison
    "S101",    # assert
    "S311",    # suspicious-non-cryptographic-random-usage
    "SLF001",  # private-member-access
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 10

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["jansou"]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
